--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -91,8 +91,12 @@ header a:hover {
 
 header .menu-categorias {
     justify-content: center;
-    height: 40px;
+    height: 60px;
     border-bottom: 1px solid;
+}
+
+header .menu-categorias nav {
+    height: 100%;
 }
 
 header .menu-categorias ul {
@@ -101,6 +105,7 @@ header .menu-categorias ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 header .menu-categorias ul li {
@@ -108,7 +113,9 @@ header .menu-categorias ul li {
     text-align: center;
     border-radius: 15px 15px 0 0;
     line-height: initial;
-
+    height: 100%;
+    
+    display: flex;
     align-items: center;
 } header .menu-categorias ul li:hover {
     background: #EAFFDD;
@@ -122,7 +129,7 @@ header .menu-categorias ul ul {
     
     left: 0;
 
-    background: #ccffac;
+    background: #EAFFDD;
     width: 100%;
     height: 350px;
     box-shadow: 0 0 4px rgb(29, 27, 27);
