Corrigindo tamanho do menu

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,13 +28,11 @@
             <ul>
                 <li><a href="#">CAMPEONATO ARGENTINO</a>
                     <ul>
-                        <li><a href="">TESTE 1</a></li>
+                        <li><a href=""></a></li>
                     </ul>
                 </li>
                 <li><a href="">CAMPEONATO BRASILEIRO</a>
                     <ul>
-                        <li><a href="">TESTE 2</a></li>
-                        <li><a href="">TESTE 2</a></li>
                     </ul>
                 </li>
                 <li><a href="">CAMPEONATO ESPANHOL</a>
